examples/error/src/app/settings/profile/screen.tsx
import { Text } from 'ink'

export default function ProfileScreen() {
  return <Text>Profile Page (inherits settings error)</Text>
}
